feat: improve desktop receiver workflow